--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,21 @@
 version: '3.6'
 
 services:
-
   wordpress:
     build:
       context: ./php
       args:
-        - NR_LICENSE_KEY=${NR_LICENSE_KEY:-Redacted}
+        - NR_LICENSE_KEY=${NR_LICENSE_KEY:-REPLACE_WITH_REAL_KEY}
         - NR_DOWNLOAD=${NR_DOWNLOAD:-newrelic-php5-8.7.0.242-linux.tar.gz}
-        - NR_APP_NAME=${NR_APP_NAME:-Application}
+        - NR_APP_NAME=${NR_APP_NAME:-Default}
         - WORDPRESS_VERSION=${WORDPRESS_VERSION:-php7.3-fpm}
     container_name: wordpress
     volumes:
       - ${WORDPRESS_DATA_DIR:-./www/html/wordpress}:/var/www/html
     environment:
-      - NR_LICENSE_KEY=${NR_LICENSE_KEY:-Redacted}
+      - NR_LICENSE_KEY=${NR_LICENSE_KEY:-REPLACE_WITH_REAL_KEY}
       - NR_DOWNLOAD=${NR_DOWNLOAD:-newrelic-php5-8.7.0.242-linux.tar.gz}
-      - NR_APP_NAME=${NR_APP_NAME:-Application}
+      - NR_APP_NAME=${NR_APP_NAME:-Default}
       - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME:-wordpress}
       - WORDPRESS_TABLE_PREFIX=${WORDPRESS_TABLE_PREFIX:-wp_}
       - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST:-172.20.20.23}
