--- a/.docker-compose.yml
+++ b/.docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: .
       args:
+        - NR_LICENSE_KEY=${NR_LICENSE_KEY:-REPLACE_WITH_REAL_KEY}
+        - NR_DOWNLOAD=${NR_DOWNLOAD:-newrelic-php5-8.7.0.242-linux.tar.gz}
+        - NR_APP_NAME=${NR_APP_NAME:-Default}
         - WORDPRESS_VERSION=${WORDPRESS_VERSION:-php7.3-fpm}
     container_name: wordpress
     volumes:
